--- a/src/app/template/components/alterar-perfil/dialogo-confirmacao/dialogo-confirmacao.component.html
+++ b/src/app/template/components/alterar-perfil/dialogo-confirmacao/dialogo-confirmacao.component.html
@@ -1,8 +1,8 @@
 <div class="container">
     <div *ngIf="data.perfil_usuario === 'USUARIO'" class="perfil-administrador">
         <h3>Deseja tornar este perfil como administrador?</h3>
-        <p>O perfil administrador permite a visualização da torina de usuários e templates cadastrados,
-            assim como efetuar downloads, uploads, ativar e desativar templates.
+        <p>O perfil administrador permite a visualização da rotina de usuários e templates cadastrados,
+            assim como efetuar downloads de templates, uploads de arquivos, ativar e desativar templates.
         </p>
         <h4>Deseja confirmar?</h4>
         <div class="campo-confirmacao">
@@ -15,7 +15,7 @@
         <h3>Deseja tornar este perfil como usuário?</h3>
         <p>O perfil usuário apenas possui as permissões para cadastro de templates e 
             visualização de templates cadastrados, fazer download de templates habilitados 
-            e uploads de templates.
+            e visualização dos arquivos recentemente cadastrados
         </p>
         <h4>Deseja confirmar?</h4>
         <div class="campo-confirmacao">
