--- a/src/app/template/components/arquivos-cadastrados/arquivos-cadastrados.component.html
+++ b/src/app/template/components/arquivos-cadastrados/arquivos-cadastrados.component.html
@@ -24,7 +24,7 @@
                 
             </div>
             <div class="btns-validacao-upload">
-                <button (click)="levarParaValidacao()">Validar</button>
+                <button (click)="levarParaValidacao()">UPLOAD</button>
             </div>
         </div>
 
