--- a/src/app/template/components/informacoes-template/informacoes-template.component.css
+++ b/src/app/template/components/informacoes-template/informacoes-template.component.css
@@ -57,7 +57,7 @@ hr{
 
 .campo label{
     color: #258A42;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
 }
 
 .campo input{
@@ -112,7 +112,7 @@ hr{
 
 .campo{
     width: 35vw;
-    margin-left: 3%;
+    margin-left: 5%;
     margin-top: 4%;
 }
 
@@ -195,7 +195,7 @@ hr{
     display: flex;
 
     margin-left: 7%; 
-    padding-bottom: 10%;
+    padding-bottom: 5%;
 }
 
 h4{
@@ -210,15 +210,15 @@ h3{
 }
 
 .apresentacao-campo hr{
-    width: 100%;
+    width: 80%;
     margin-right: 20%;
 }
 
 .apresentacao-campo h4{
     font-size: 1.5rem;
     color: #258A42;
-    margin-top: 15%;
-    margin-left: 2%;
+    margin-top: 5%;
+    margin-left: 5%;
 }
 
 
@@ -236,4 +236,11 @@ input:disabled{
     margin-top: 2%;
     margin-bottom: 10px;
     border-radius: 4px;
+}
+
+footer{
+    height: 10vh;
+    margin-left: 25vw;
+    margin-top: 5%;
+    color: #F9FBF9;
 }
